Исправила поломанный тест эпика по пересечению задач